# simple_http

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  flake.nix  xmake.lua
.github/workflows/: ci.yaml  clang.yaml  gcc.yaml  ubuntu-gcc13.yaml
cmake/: simple_httpConfig.cmake.in
docs/: SPEC_UNIT_TEST.md
include/: simple_http.cppm  simple_http.h
test/: CMakeLists.txt  client.cpp  main.cpp  server.cpp  test_h2_stream.py  test_websocket.py  unit_tests.cpp  xmake.lua
test/tls_certificates/: ca_cert.pem  ca_key.pem  cert.pem  client_cert.pem  client_key.pem  key.pem  server_cert.pem  server_key.pem
